[package]
name = "htmlescape"
version = "0.3.1"
authors = [ "Viktor Dahl <pazaconyoman@gmail.com>" ]
license = "Apache-2.0 / MIT / MPL-2.0"
repository = "https://github.com/veddan/rust-htmlescape"
description = "A library for HTML entity encoding and decoding"

[lib]
name = "htmlescape"
path = "src/lib.rs"

[target.'cfg(not(target_env = "sgx"))'.dependencies]
sgx_tstd = { version = "1.0", rev = "v1.1.2", git = "https://github.com/apache/teaclave-sgx-sdk.git", features=["untrusted_fs","thread", "backtrace"] }

[dev-dependencies]
num = "0.1.26"
rand = "0.3.14"
